package type;

public enum IngredientType {
    DAIRY,
    FAT,
    ADDITIVE
}
