package type;

public enum TrialStatus { 
    // FIXED: file data uses PLANNED, not PLANED
    PLANNED,
    IN_PROGRESS,
    COMPLETED,
    CANCELLED
}
